--- a/style.css
+++ b/style.css
@@ -1,8 +1,44 @@
+@font-face {
+    font-family: 'kingthings';
+    src: url('Kingthings_Foundation-webfont.eot');
+    src: url('Kingthings_Foundation-webfont.eot?#iefix') format('embedded-opentype'),
+         url('./fonts/kingthings/Kingthings_Foundation-webfont.woff') format('woff'),
+         url('Kingthings_Foundation-webfont.ttf') format('truetype'),
+         url('Kingthings_Foundation-webfont.svg#kingthings_foundationregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'special_elite';
+    src: url('./fonts/special-elite/specialelite-regular-webfont.woff2') format('woff2'),
+         url('./fonts/special-elite/specialelite-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+@font-face {
+    font-family: 'eraserregular';
+    src: url('EraserRegular-webfont.eot');
+    src: url('EraserRegular-webfont.eot?#iefix') format('embedded-opentype'),
+         url('./fonts/eraser-regular/EraserRegular-webfont.woff') format('woff'),
+         url('EraserRegular-webfont.ttf') format('truetype'),
+         url('EraserRegular-webfont.svg#eraserregular') format('svg');
+    font-weight: normal;
+    font-style: normal;
+
+}
+
+
 :root {
 	--transit: all .2s ease-out;
 	--board-piece: 2px solid #fff3;
 	--dark: #191919;
 	--lightgray: #c5c5c5;
+	--box-shadow: 0 0 .75rem 0 #fff;
+	font-family: Helvetica , sans-serif;
 }
 
 * {
@@ -11,12 +47,24 @@
 	margin: 0;
 }
 
+@keyframes blink{
+		from {
+			opacity: 1;
+		}
+		to {
+			opacity: 0;
+		}
+}
+
 body {
-  background: #444;
+	--player-1-clr: #444;
+	--player-2-clr: #444;
+  background: linear-gradient(to right, var(--player-1-clr), var(--player-2-clr));
   display: grid;
   color: var(--lightgray);
   grid: 50px 200px 1fr / 10% 80% 10%;
 	row-gap: 1.5rem;
+	transition: var(--transit);
 }
 
 .header {
@@ -24,31 +72,51 @@ body {
   display: flex;
 	background: var(--dark);
   align-items: center;
+	justify-content: center;
 	border-inline: 2px solid;
+	position: sticky;
+	top: 0;
+	box-shadow: 0 -2rem 4rem #fff;
 }
 
 .header ul {
   list-style: none;
-  display: flex;
-  gap: 1rem;
+  display: grid;
+  grid: auto / repeat(3, 1fr);
+  gap: 2rem;
+  padding-inline: 1rem;
+  flex: 1;
   align-items: center;
-	height: 100%;
-	padding-inline: 1rem;
+  justify-items: center;
 }
 
 li.logo {
   font-size: 1.5rem;
+	font-variant-caps: all-small-caps;
+}
+
+.british {
+	font-family: 'kingthings';
+	letter-spacing: .1rem;
+}
+
+.american {
+	font-family: 'special_elite';
+	letter-spacing: .1rem;
+	font-variant-caps: all-small-caps;
 }
 
 li.new-game {
 	padding-inline: .5rem;
-	font-size: 1.15rem;
+	font-size: 2rem;
 	align-self: stretch;
 	transition: var(--transit);
 	display: flex;
 	align-items: center;
 	border-radius: .1rem;
 	cursor: pointer;
+	font-variant-caps: all-small-caps;
+	transition: var(--transit);
 	&:hover {
 		background: var(--lightgray);
 		color: var(--dark);
@@ -70,41 +138,103 @@ li.new-game {
   font-variant-caps: all-small-caps;
 }
 
+.spaced {
+	font-size: 5rem;
+	letter-spacing: .5rem;
+}
+
 .title h2 {
   border-radius: .5rem;
   border-inline: 5px ridge;
   padding-inline: 2rem;
 }
 
-button.play-btn {
-  padding: .5rem 1.5rem;
-  background: var(--dark);
-  color: #fff;
-  font-size: 1.15rem;
-  font-variant-caps: all-small-caps;
-  transition: var(--transit);
-	border-radius: .5rem;
-	&:hover {
-		background: var(--lightgray);
-		color: var(--dark);
-		border-style: groove;
-		border-color: #000;
-	}
-}
-
 .container {
   grid-area: 3 / 2 / 4 / 3;
 	border-block: 2px dotted;
+	border-inline: 2px transparent;
   border-radius: 1rem;
 	padding-block: 1.5rem;
 	padding-inline: 5rem;
+	padding-bottom: 4rem;
 	margin-bottom: 2rem;
+	display: flex;
+	flex-flow: column;
+	gap: 3rem;
 	transition: var(--transit);
+}
+
+.player-info-container {
+  display: grid;
+  grid: repeat(2, minmax(2rem, max-content)) / repeat(2, 1fr);
+  gap: 1rem 2rem;
+}
+
+h2.player-info-title {
+  grid-area: 1 / 1 / 2 / -1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-variant-caps: all-small-caps;
+  font-size: 2.25rem;
+}
+
+.player-1-wrapper {
+  grid-area: 2 / 1 / 3 / 2;
+	align-items: flex-end;
+}
+
+.player-2-wrapper {
+  grid-area: 2 / 2 / 3 / 3;
+	align-items: flex-start;
+}
+
+.player-wrapper {
+  display: flex;
+  flex-flow: column;
+  gap: 1rem;
+}
+
+.player-clr-wrapper, .player-name-wrapper {
+  display: flex;
+  gap: .5rem;
+  align-items: center;
+}
+
+.player-info-container label {
+	font-variant-caps: all-small-caps;
+	font-size: 1.25rem;
+}
+
+.player-clr-wrapper input {
+  background: var(--dark);
+  border: 1px inset #999;
+}
+
+.player-name-wrapper input {
+  background: var(--dark);
+  color: #e5e5e5;
+  padding: .1rem .3rem;
+	font-size: 1.1rem;
+	font-variant-caps: all-small-caps;
+	transition: var(--transit);
+	&:focus {
+		box-shadow: var(--box-shadow);
+	}
+}
+
+input[id=player-name-1] {
+	text-align: right;
+}
+
+input[id=player-name-2] {
+	text-align: left;
 }
 
 .game-container {
   display: grid;
 	grid: minmax(10%, 2.25rem) 1fr minmax(10%, 2.25rem) / auto;
+	row-gap: 1.25rem;
 }
 
 .top-message-board {
@@ -114,7 +244,19 @@ button.play-btn {
   display: flex;
   justify-content: center;
   align-items: center;
-  padding-bottom: 1rem;
+  padding-block: 1rem;
+	&::before {
+		content: '|';
+		color: #fff;
+		text-shadow: 0 0 1rem #fff;
+		padding-right: .5rem;
+	}
+	&::after {
+		content: '|';
+		color: #fff;
+		text-shadow: 0 0 1rem #fff;
+		padding-left: .5rem;
+	}
 }
 
 .game-board {
@@ -122,17 +264,39 @@ button.play-btn {
   display: grid;
 	grid: repeat(3, minmax(80px, 1fr)) / repeat(3, 1fr);
 	border-inline: 1px groove;
+	border-block: 1px transparent;
 	border-radius: .5rem;
 }
 
 .bottom-message-board {
   grid-area: 3 / 1 / 4 / 2;
-  font-size: 1.5rem;
+  font-size: 1.25rem;
 	border: none;
-  padding-top: 1rem;
+  padding-block: 1rem;
+	padding-inline: 2rem;
   display: flex;
   justify-content: center;
   align-items: center;
+	&::before {
+		content: '|';
+		color: #fff;
+		text-shadow: 0 0 1rem #fff;
+		padding-right: .5rem;
+	}
+	&::after {
+		content: '|';
+		color: #fff;
+		text-shadow: 0 0 1rem #fff;
+		padding-left: .5rem;
+	}
+}
+
+.bottom-message-board::before, .top-message-board::before, .bottom-message-board::after, .top-message-board::after {
+	animation-name: blink;
+	animation-direction: alternate;
+	animation-duration: .75s;
+	animation-iteration-count: infinite;
+	animation-timing-function: ease-in-out;
 }
 
 .board-piece {
@@ -159,12 +323,12 @@ button.play-btn {
 /* Borders animation */
 
 .container:has(.game-board:hover) {
-	border-block: none;
+	border-block: 2px transparent;
 	border-inline: 2px dotted;
 }
 
 .game-board:hover {
-	border-inline: none;
+	border-inline: 1px transparent;
 	border-block: 1px groove;
 }
 
